changed a whole lot
changed a whole lot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#server.port=9080
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -17,12 +18,12 @@ mybatis.config-location=classpath:./mybatis-config.xml
 # = Spring Boot Security
 # ===============================
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
-spring.security.basic.enabled=true
-spring.security.user.name=user
-spring.security.user.password=password
-spring.security.user.roles=USER, ADMIN
+#spring.security.basic.enabled=true
+#spring.security.user.name=user
+#spring.security.user.password=password
+#spring.security.user.roles=USER, ADMIN
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
-logging.level.org.springframework=TRACE
-logging.level.com=TRACE
+logging.level.org.springframework=ERROR
+logging.level.com=ERROR
 #spring.jackson.mapper.accept_case_insensitive_properties=true
