--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ spring.datasource.validationQuery=SELECT 1
 # ===============================
 # = MYBATIS DATA SOURCE Persistence Framework
 # ===============================
-mybatis.config-location=classpath:./mybatis-config.xml
+mybatis.mapper-locations=classpath:./StudentMapper.xml
+mybatis.type-aliases-package=SpringBootDemo.Beans
 # ===============================
 # = Spring Boot Security
 # ===============================
