added mybatis collection
added mybatis collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+message=my message
 #server.port=9080
 # ===============================
 # = DATA SOURCE
@@ -13,7 +14,7 @@ spring.datasource.validationQuery=SELECT 1
 # ===============================
 # = MYBATIS DATA SOURCE Persistence Framework
 # ===============================
-mybatis.mapper-locations=classpath:./StudentMapper.xml
+mybatis.mapper-locations=classpath:./StudentMapper.xml, ./PersonAddressMapper.xml
 mybatis.type-aliases-package=SpringBootDemo.Beans
 # ===============================
 # = Spring Boot Security
