--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.validationQuery=SELECT 1
 # ===============================
 # = MYBATIS DATA SOURCE Persistence Framework
 # ===============================
-mybatis.mapper-locations=classpath:./StudentMapper.xml, ./PersonAddressMapper.xml
+mybatis.mapper-locations=classpath:./StudentMapper.xml, ./PersonAddressMapper.xml, ./ResultsSetMapper.xml
 mybatis.type-aliases-package=SpringBootDemo.Beans
 # ===============================
 # = Spring Boot Security
