--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=ERROR
 logging.level.com=ERROR
 #spring.jackson.mapper.accept_case_insensitive_properties=true
+spring.activemq.broker-url=vm://embedded?broker.persistent=false&broker.useShutdownHook=false
+spring.activemq.user=admin
+spring.activemq.password=secret
