--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+		    <version>5.1.0</version>
+		    <scope>test</scope>
+		</dependency>
 		
-				<!-- JSTL for JSP -->
+		<!-- JSTL for JSP -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
@@ -72,14 +78,26 @@
 			<scope>provided</scope>
 		</dependency>
 		
-    <!-- Need this to compile JSP -->
-    <dependency>
-      <groupId>org.eclipse.jdt.core.compiler</groupId>
-      <artifactId>ecj</artifactId>
-      <version>4.6.1</version>
-    </dependency>
-		
-		
+    	<!-- Need this to compile JSP -->
+	    <dependency>
+	      <groupId>org.eclipse.jdt.core.compiler</groupId>
+	      <artifactId>ecj</artifactId>
+	      <version>4.6.1</version>
+	    </dependency>
+		<!-- Need this for JMS -->
+		<dependency>
+	          <groupId>org.springframework.boot</groupId>
+	          <artifactId>spring-boot-starter-activemq</artifactId>
+	    </dependency>
+	    <dependency>
+	          <groupId>org.apache.activemq</groupId>
+	          <artifactId>activemq-broker</artifactId>
+	    </dependency>		
+		<dependency>
+		      <groupId>com.fasterxml.jackson.core</groupId>
+		      <artifactId>jackson-databind</artifactId>
+		</dependency>
+	    
 	</dependencies>
 
 	<build>
