--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=5000
 spring.datasource.url=jdbc:mysql://springschema.c4ellupaqkpx.us-east-1.rds.amazonaws.com:3306/springschema?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -25,8 +25,11 @@ mybatis.type-aliases-package=SpringBootDemo.Beans
 #spring.security.user.name=user
 #spring.security.user.password=password
 #spring.security.user.roles=USER, ADMIN
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
+#spring.thymeleaf.presfix= /WEB-INF/html/
+#spring.thymeleaf.suffix= .html
+#spring.thymeleaf.cache= false
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=ERROR
 logging.level.com=ERROR
 #spring.jackson.mapper.accept_case_insensitive_properties=true
